--- a/index.html
+++ b/index.html
@@ -195,7 +195,6 @@
       </div>
       <div class="part-container">
         <div class="row-conatiner">
-          <div class="square"></div>
           <img src="./images/Edit Square.png" alt="" />
           <h4>Content Marketer</h4>
           <p>
@@ -232,7 +231,7 @@
         </div>
       </div>
     </section>
-    <div class="section-four">
+    <section class="section-four">
       <div class="left">
         <div class="heading-section3">
           <h1>Get Certified</h1>
@@ -244,15 +243,325 @@
         <div class="card-container">
           <div class="card">
             <div class="ractangle">
-
+              <img src="./images/Ticket Star.png" alt="" />
             </div>
-            <img src="./images/Ticket Star.png" alt="">
-            
+            <div class="text-content">
+              <h4>Official and verifie</h4>
+              <p>
+                Lorem ipsum dolor sit amet consectetur. Imperdiet tellus ut
+                ornare pharetra leo vestibulum at orci.
+              </p>
+            </div>
+          </div>
+          <div class="card">
+            <div class="ractangle">
+              <img src="./images/Send (1).png" alt="" />
+            </div>
+            <div class="text-content">
+              <h4>Official and verifie</h4>
+              <p>
+                Lorem ipsum dolor sit amet consectetur. Imperdiet tellus ut
+                ornare pharetra leo vestibulum at orci.
+              </p>
+            </div>
+          </div>
+          <div class="card">
+            <div class="ractangle">
+              <img src="./images/hello.png" alt="" />
+            </div>
+            <div class="text-content">
+              <h4>Official and verifie</h4>
+              <p>
+                Lorem ipsum dolor sit amet consectetur. Imperdiet tellus ut
+                ornare pharetra leo vestibulum at orci.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="book-class-btn btn">Book Free Class</div>
+      </div>
+      <div class="right">
+        <img class="img-one" src="./images/image 136.png" alt="" />
+        <img
+          class="jaipur-img"
+          src="./images/jaipur-center-certificate 1.png"
+          alt=""
+        />
+      </div>
+    </section>
+    <section class="section-five">
+      <div class="heading-section five">
+        <h1>
+          Curriculum of <br />
+          Our Digital Marketing
+        </h1>
+        <p>
+          Lorem ipsum dolor sit amet consectetur Imperdiet tellus ut ornare
+          pharetra.
+        </p>
+      </div>
+      <ul class="row_one">
+        <li id="unique">Introduction</li>
+        <li>Case Studies</li>
+        <li>Case Studies</li>
+        <li>Google AdSense</li>
+        <li>SEO Mastery</li>
+        <li>Google Analytics</li>
+      </ul>
+      <div class="row_two">
+        <div class="section-five-left">
+          <div>
+            <img height="32px" width="32px" src="./images/shi.png" />What is
+            Digital Marketing?
+          </div>
+          <div>
+            <img height="32px" width="32px" src="./images/shi.png" />Requirement
+            of Digital Marketing
+          </div>
+          <div>
+            <img height="32px" width="32px" src="./images/shi.png" />Digital
+            Marketing for Working Professionals
+          </div>
+          <div>
+            <img height="32px" width="32px" src="./images/shi.png" />Job
+            opportunities in Digital Marketing
+          </div>
+        </div>
+        <div class="section-five-right">
+          <div>
+            <img height="32px" width="32px" src="./images/shi.png" />Scope of
+            Digital Marketing
+          </div>
+          <div>
+            <img height="32px" width="32px" src="./images/shi.png" />Latest
+            Trends in Digital Marketing
+          </div>
+          <div>
+            <img height="32px" width="32px" src="./images/shi.png" />Digital
+            Marketing for Small, Medium, and Large Businesses
           </div>
         </div>
       </div>
-      <div class="right"></div>
-    </div>
+      <div class="section-five-btn btn">Download Curriculum</div>
+    </section>
+    <section class="section-six">
+      <div class="heading-section-six">
+        <h1>Why Learn Digital Marketing</h1>
+        <p>
+          Lorem ipsum dolor sit amet consectetur. Imperdiet tellus ut ornare
+          pharetra leo vestibulum at orci.
+        </p>
+      </div>
+      <div class="section-sex-cards">
+        <div class="row">
+          <div class="six-card">
+            <img
+              style="margin-bottom: 24px"
+              height="64px"
+              width="64px"
+              src="./images/frame_.png"
+              alt=""
+            />
+            <h4>Learn From Industry Experts</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur. Imperdiet tellus ut ornare
+              pharetra leo vestibulum at orci.
+            </p>
+          </div>
+          <div class="six-card">
+            <img
+              style="margin-bottom: 24px"
+              height="64px"
+              width="64px"
+              src="./images/frame_two.png"
+              alt=""
+            />
+            <h4>Structured & Latest Curriculum</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur. Imperdiet tellus ut ornare
+              pharetra leo vestibulum at orci.
+            </p>
+          </div>
+          <div class="six-card">
+            <img
+              style="margin-bottom: 24px"
+              height="64px"
+              width="64px"
+              src="./images/frame_three.png"
+              alt=""
+            />
+            <h4>Highly-Engaging Live Classes</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur. Imperdiet tellus ut ornare
+              pharetra leo vestibulum at orci.
+            </p>
+          </div>
+        </div>
+        <!--  -->
+        <div class="row">
+          <div class="six-card">
+            <img
+              style="margin-bottom: 24px"
+              height="64px"
+              width="64px"
+              src="./images/frame_four.png"
+              alt=""
+            />
+            <h4>Work on Real Projects</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur. Imperdiet tellus ut ornare
+              pharetra leo vestibulum at orci.
+            </p>
+          </div>
+          <div class="six-card">
+            <img
+              style="margin-bottom: 24px"
+              height="64px"
+              width="64px"
+              src="./images/frame_five.png"
+              alt=""
+            />
+            <h4>100% Job Assistance</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur. Imperdiet tellus ut ornare
+              pharetra leo vestibulum at orci.
+            </p>
+          </div>
+          <div class="six-card">
+            <img
+              style="margin-bottom: 24px"
+              height="64px"
+              width="64px"
+              src="./images/frame_six.png"
+              alt=""
+            />
+            <h4>Get Certification</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur. Imperdiet tellus ut ornare
+              pharetra leo vestibulum at orci.
+            </p>
+          </div>
+        </div>
+        <div class="section-six-button btn">Book Free Class</div>
+      </div>
+    </section>
+    <section class="section-seven">
+      <div class="heading-seven">
+        <h1>What Our Students Are Saying!</h1>
+        <p>
+          Lorem ipsum dolor sit amet consectetur Imperdiet tellus ut ornare
+          pharetra.
+        </p>
+      </div>
+      <div class="seven-row">
+        <div class="card-seven">
+          <div class="identity">
+            <img
+              height="80px"
+              width="80px"
+              style="border-radius: 50%"
+              src="./images/Ellipse 95.png"
+              alt=""
+            />
+            <div class="identity-heading">
+              <h3>Matt Cannon</h3>
+              <p>September 1, 2023</p>
+            </div>
+          </div>
+          <p>
+            Lorem ipsum dolor sit amet consectetur. Arcu nisi diam eget id
+            turpis donec et morbi. Sit eu nisl non scelerisque vestibulum
+            pulvinar. Condimentum massa bibendum pretium tincidunt sed vel.
+          </p>
+        </div>
+        <div class="card-seven">
+          <div class="identity">
+            <img
+              height="80px"
+              width="80px"
+              style="border-radius: 50%"
+              src="./images/Ellipse 96.png"
+              alt=""
+            />
+            <div class="identity-heading">
+              <h3>Matt Cannon</h3>
+              <p>September 1, 2023</p>
+            </div>
+          </div>
+          <p>
+            Lorem ipsum dolor sit amet consectetur. Arcu nisi diam eget id
+            turpis donec et morbi. Sit eu nisl non scelerisque vestibulum
+            pulvinar. Condimentum massa bibendum pretium tincidunt sed vel.
+          </p>
+        </div>
+      </div>
+    </section>
+    <section class="section-aeight">
+      <div class="heading-aeight">
+        <h1>Are You Ready To Start Your Course?</h1>
+        <p>
+          Lorem ipsum dolor sit amet consectetur. Arcu nisi diam eget id turpis
+          donec et morbi.
+        </p>
+      </div>
+      <img class="left-img" src="./images/image 145.png" alt="" />
+      <img class="right-img" src="./images/image 145.png" alt="" />
+      <div class="aeight-button btn">Book Free Class</div>
+    </section>
+    <section class="section-nine">
+      <div class="heading-nine">
+        <h1>Digital Marketing Course FAQs</h1>
+        <p>
+          Lorem ipsum dolor sit amet consectetur Imperdiet tellus ut ornare
+          pharetra.
+        </p>
+      </div>
+      <div class="border-one">
+        <h4>What is website development?</h4>
+        <p>
+          Lorem ipsum dolor sit amet consectetur. Mattis id rhoncus non
+          fermentum quam duis faucibus blandit. Non suscipit quis sed et mus
+          nisl lacinia massa. Dignissim in adipiscing amet nisi eu semper augue.
+          Amet dignissim blandit mi amet felis et malesuada. Sit.
+        </p>
+      </div>
+      <div class="border-two">
+        <h4>What is website development?</h4>
+        <img height="15px" width="15px" src="./images/Plus.png" alt="" />
+      </div>
+      <div class="border-two">
+        <h4>What is website development?</h4>
+        <img height="15px" width="15px" src="./images/Plus.png" alt="" />
+      </div>
+      <div class="border-two">
+        <h4>What is website development?</h4>
+        <img height="15px" width="15px" src="./images/Plus.png" alt="" />
+      </div>
+      <div class="nine-button btn">Book Free Class</div>
+    </section>
+    <section class="section-ten">
+      <div class="ten-row-one">
+        <h1>Top Companies Hiring Digital Marketing in India</h1>
+      </div>
+      <div class="ten-row-two">
+        <img src="./images/image 144.png" alt="" />
+      </div>
+    </section>
     <!-- main section start here -->
+    <!-- footer start here -->
+    <footer class="footer">
+      <img height="60px" width="165px" src="./images/logo_black 2.png" alt="" />
+      <p>
+        Lorem ipsum dolor sit amet consectetur. Mattis id rhoncus non fermentum
+        quam duis faucibus blandit. Non suscipit quis sed et mus nisl lacinia
+        massa
+      </p>
+      <hr />
+      <p>
+        All rights reserved by
+        <a href="https://www.wscubetech.com/" target="_blank">WsCube Tech</a>
+      </p>
+    </footer>
+    <!-- footer end here -->
   </body>
 </html>
